# tsp-sol

./: .gitignore  Cargo.toml  readme.md  readme.md.bak  runme.py
scripts/: algebra.py  conic_playground.py  conic_xyzrp_plot.py  html_playground.html  magnify_coords.py  valid-move-calculator.py
src/: brute_algo.rs  jeff_algo.rs  main.rs  parabolics.rs  parabolics_shader.wgsl
src/old/: jeff_algo.2020v1.rs  jeff_algo.old_with_center.rs  jeff_algo_2019.rs
tsp/: 4x4.tsp  envelope_triangle.tsp  envelope_triangle_v2.tsp  fat_envelope.tsp  flower1.tsp  flower2.tsp  flower3.tsp  flower3a.tsp  square.tsp  st16.tsp
