[package]
name = "tsp-sol"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]

[dependencies]
tsplib = "0.1"
image = "0.23"
imageproc = { version = "0.22", default-features = false }
rusttype = "0.9"
rand = "0.5"
permutohedron = "0.2"
factorial = "0.2"
num_cpus = "1.13"
crossbeam = "0.8"
num = "0.4"
once_cell = "1.17"

[profile.release]
debug = 1
# https://deterministic.space/high-performance-rust.html
lto = "fat"
codegen-units = 1
panic = "abort"

# We have RUSTFLAGS="-C target-cpu=native" in our profile

