[package]
name = "tsp-sol"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey McAteer <jeffrey@jmcateer.com>"]

[dependencies]
tsplib = "0.1"
image = "0.23"
imageproc = { version = "0.22", default-features = false }
rusttype = "0.9"
rand = "0.5"
permutohedron = "0.2"
factorial = "0.2"
num_cpus = "1.15"
# crossbeam = "0.8"
num = "0.4"
once_cell = "1.17"
# zerovec = "0.9"
pickledb = "0.5"
threadpool = "1.8"
engiffen = "0.8"

linreg = "0.2"
fastrand = "2.0"

emu_core = "0.1"
futures = "0.3"


[target.'cfg(not(windows))'.dependencies]
fasthash = "0.4"


[profile.release]
debug = 1
# https://deterministic.space/high-performance-rust.html
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug-assertions = false
incremental = false

# We have RUSTFLAGS="-C target-cpu=native" in our profile


